# RD2-CPP-PA2

./: .~lock.Aktiekurser.docx#  Aktiekurser.docx  CMakeLists.txt  DateTime.cpp  DateTime.h  Stock.cpp  Stock.h  TradeInfo.cpp  TradeInfo.h  TradeLoader.cpp  TradeLoader.h  main.cpp
Datafiler Aktiekurser/: COLOB.DKDKK_Candlestick_1_M_BID_01.01.2023-21.03.2023.csv
